Remove jank from tile anim and fix overflows (#252)

--- a/client/src/components/Navigation/DesktopNav/Company/styles.module.css
+++ b/client/src/components/Navigation/DesktopNav/Company/styles.module.css
@@ -4,7 +4,7 @@
 .container {
     width: 100vw;
     height: 100%;
-    max-width: 72rem;
+    max-width: 70rem;
     background-color: var(--c--white);
     border: 1px solid var(--c--gray-lighter);
     border-radius: 8px;
@@ -16,15 +16,6 @@
     height: calc(100% - 50px);
     margin: 0;
     padding: 0;
-
-    & li:nth-child(3) {
-        background-size: 66%;
-        background-position: bottom -56px right -22px;
-
-        &:hover {
-            background-size: 68%;
-        }
-    }
 
     & h2 {
         max-width: 52%;
