--- a/client/src/components/Navigation/DesktopNav/styles.module.css
+++ b/client/src/components/Navigation/DesktopNav/styles.module.css
@@ -211,7 +211,7 @@
     left: 0;
     height: 260px;
     margin-top: -0.5rem;
-    max-width: 72rem;
+    max-width: 70rem;
     opacity: 0;
     pointer-events: none;
     overflow: hidden;
