--- a/client/src/components/Navigation/Tile/styles.module.css
+++ b/client/src/components/Navigation/Tile/styles.module.css
@@ -4,18 +4,11 @@
 
 .tile {
     display: flex;
+    position: relative;
     padding: 0 1.5rem;
     flex-grow: 1;
     color: var(--c--black);
-    background-size: 48%;
-    background-position: center right -3px;
-    background-repeat: no-repeat;
-    transition: background-size ease 300ms;
     cursor: pointer;
-
-    &:hover {
-        background-size: 50%;
-    }
 
     & a {
         color: var(--c--black);
@@ -42,9 +35,7 @@
     @media (--mq-m) {
         padding: 1.5rem;
         border: 1px solid var(--c--gray-lighter);
-        background-size: 55%;
-        background-position: center right -88px;
-        background-repeat: no-repeat;
+        overflow: hidden;
     }
 
     @media (--mq-gt-m) {
@@ -53,6 +44,15 @@
         padding-bottom: 5rem;
         flex-wrap: wrap;
         align-items: center;
+
+        &:hover .background {
+            transform: scale(1.05);
+        }
+
+        &:nth-child(3) .background {
+            background-position: bottom right;
+            transform-origin: bottom right;
+        }
 
         &.hasLink {
             padding-bottom: 0;
@@ -68,8 +68,33 @@
     }
 }
 
+.background {
+    position: absolute;
+    top: -1.5rem;
+    right: 0;
+    bottom: -1.5rem;
+    left: 0;
+    z-index: 0;
+    background-size: 48%;
+    background-position: center right;
+    background-repeat: no-repeat;
+    transition: transform 300ms ease;
+    transform-origin: right;
+
+    @media (--mq-m) {
+        background-size: 55%;
+        background-position: center right -88px;
+        background-repeat: no-repeat;
+    }
+}
+
 .tileLink {
     width: 100%;
     height: 100%;
     padding: 0 1.5rem 5rem;
+    z-index: 1;
+
+    &:hover {
+        color: var(--c--blue-dark);
+    }
 }
